tests/int/use_command/snapshots/integration__int__use_command__flags__modules_mixed_flags_r_e.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - mixed
    - "-r"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::custom_path::greet
crate::mixed::file_child::greet
crate::mixed::greet

----- stderr -----
